# unperplex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cl/: complex_fn.cl
include/: animation.h  clinit.h  components.h  def.h  etc.h  graph.h  program.h  render.h  unperplex.h
include/ui/: animation.h  components.h  layout.h  ui.h
include/ui/decl/: button.h  custom.h  mouse.h
src/: animation.c  clinit.c  components.c  etc.c  graph.c  main.c  program.c  render.c  unperplex.c
src/ui/: animation.c  components.c  layout.c  ui.c
